apply spotless and apply sonarlint